--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Views-example</string>
+    <string name="tag_nombre">Nombre:</string>
+    <string name="nombre">Nombre</string>
+    <string name="tag_edad">Edad:</string>
+    <string name="edad">Edad</string>
+    <string name="tag_correo">Correo:</string>
+    <string name="correo">Correo</string>
+    <string name="tag_tel_fono">Teléfono:</string>
+    <string name="tel_fono">Teléfono</string>
+    <string name="tag_contrase_a">Contraseña:</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="aceptar">Aceptar</string>
 </resources>
