--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="aceptar">Aceptar</string>
     <string name="other_activty_tag">RecyclerView</string>
     <string name="imagen">Imagen</string>
+    <string name="tag_puntos">Puntos:</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
